<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_app_nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.socam.bcms.presentation.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_main"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.socam.bcms.presentation.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        
        <action
            android:id="@+id/action_main_to_tag_activation"
            app:destination="@id/tagActivationFragment" />
        
        <action
            android:id="@+id/action_main_to_single_scan"
            app:destination="@id/singleScanFragment" />
        
        <action
            android:id="@+id/action_main_to_batch_process"
            app:destination="@id/batchProcessFragment" />
        
        <action
            android:id="@+id/action_main_to_settings"
            app:destination="@id/settingsFragment" />
        
        <action
            android:id="@+id/action_main_to_sync"
            app:destination="@id/syncFragment" />
        
        <!-- Hidden modules - navigation actions removed -->
        <!-- <action android:id="@+id/action_main_to_tag_modification" ... /> - REMOVED -->
        <!-- <action android:id="@+id/action_main_to_notifications" ... /> - REMOVED -->
    </fragment>

    <fragment
        android:id="@+id/tagActivationFragment"
        android:name="com.socam.bcms.presentation.modules.TagActivationFragment"
        android:label="@string/tag_activation_title"
        tools:layout="@layout/fragment_tag_activation">
        
        <action
            android:id="@+id/action_tag_activation_back"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>

    <fragment
        android:id="@+id/singleScanFragment"
        android:name="com.socam.bcms.presentation.modules.SingleScanFragment"
        android:label="@string/single_scan_title"
        tools:layout="@layout/fragment_single_scan">
        
        <action
            android:id="@+id/action_single_scan_back"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>

    <fragment
        android:id="@+id/batchProcessFragment"
        android:name="com.socam.bcms.presentation.modules.BatchProcessFragment"
        android:label="@string/batch_process_title"
        tools:layout="@layout/fragment_batch_process">
        
        <action
            android:id="@+id/action_batch_process_back"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.socam.bcms.presentation.modules.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings">
        
        <action
            android:id="@+id/action_settings_back"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment" />
            
        <action
            android:id="@+id/action_settings_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/syncFragment"
        android:name="com.socam.bcms.presentation.sync.SyncFragment"
        android:label="Data Synchronization"
        tools:layout="@layout/fragment_sync">
        
        <action
            android:id="@+id/action_sync_back"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>

    <!-- Hidden modules - fragments removed from navigation -->
    <!-- 
    <fragment
        android:id="@+id/tagModificationFragment"
        android:name="com.socam.bcms.presentation.modules.TagModificationFragment"
        android:label="Tag Modification"
        tools:layout="@layout/fragment_tag_modification">
        
        <action
            android:id="@+id/action_tag_modification_back"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.socam.bcms.presentation.notifications.NotificationFragment"
        android:label="Sync Notifications"
        tools:layout="@layout/fragment_notifications">
        
        <action
            android:id="@+id/action_notification_back"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>
    -->

</navigation>
